syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "shared.proto";

package products;
option go_package = "ms/gateway/pb";

service ProductsService {
    rpc FindOne(FindOneProductRequest) returns (FindOneProductResponse);
    rpc Create(CreateProductRequest) returns (CreateProductResponse);
    rpc Update(UpdateProductRequest) returns (UpdateProductResponse);
    rpc FindAll(FindAllProductsRequest) returns (FindAllProductsResponse);
    rpc DeleteOne(DeleteOneProductRequest) returns (shared.EmptyBody);
    rpc FindProductsByIds(FindProductsByIdsRequest) returns (FindProductsByIdsResponse);
}

message Product {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 quantity = 4;
    float price = 5;
    int32 categoryId = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}

message Id {
    int32 id = 1;
}

message FindOneProductRequest {
    int32 id = 1;
}

message FindOneProductResponse {
    Product product = 1;
}

message FindAllProductsRequest {
    int32 page = 1;
    int32 limit = 2;
}

message FindAllProductsResponse {
    int32 page = 1;
    int32 limit = 2;
    int64 count = 3;
    repeated Product products = 4;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    int32 quantity = 3;
    float price = 4;
    int32 categoryId = 5;
}

message CreateProductResponse {
    Product product = 1;
}

message UpdateProductResponse {
    Product product = 1;
}

message UpdateProductRequest {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 quantity = 4;
    float price = 5;
    int32 categoryId = 6;
}

message FindProductsByIdsRequest {
    repeated int32 ids = 1;
}

message FindProductsByIdsResponse {
    repeated Product products = 1;
}

message DeleteOneProductRequest {
    int32 id = 1;
}